lib/src/pq/generated_bindings_pq.dart


  late final _PQclosePortalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>>('PQclosePortal');
  late final _PQclosePortal = _PQclosePortalPtr.asFunction<
      ffi.Pointer<PGresult> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  int PQsendClosePrepared(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> stmt,
  ) {
    return _PQsendClosePrepared(
      conn,
      stmt,
    );
  }

  late final _PQsendClosePreparedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>)>>('PQsendClosePrepared');
  late final _PQsendClosePrepared = _PQsendClosePreparedPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  int PQsendClosePortal(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> portal,
  ) {
    return _PQsendClosePortal(
      conn,
      portal,
    );
  }

  late final _PQsendClosePortalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>)>>('PQsendClosePortal');
  late final _PQsendClosePortal = _PQsendClosePortalPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  void PQclear(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQclear(
      res,
    );
  }

  late final _PQclearPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PGresult>)>>(
          'PQclear');
  late final _PQclear =
      _PQclearPtr.asFunction<void Function(ffi.Pointer<PGresult>)>();

  void PQfreemem(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _PQfreemem(
      ptr,
    );
  }

  late final _PQfreememPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'PQfreemem');
  late final _PQfreemem =
      _PQfreememPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<PGresult> PQmakeEmptyPGresult(
    ffi.Pointer<PGconn> conn,
    int status,
  ) {
    return _PQmakeEmptyPGresult(
      conn,
      status,
    );
  }

  late final _PQmakeEmptyPGresultPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGconn>, ffi.Int32)>>('PQmakeEmptyPGresult');
  late final _PQmakeEmptyPGresult = _PQmakeEmptyPGresultPtr.asFunction<
      ffi.Pointer<PGresult> Function(ffi.Pointer<PGconn>, int)>();

  ffi.Pointer<PGresult> PQcopyResult(
    ffi.Pointer<PGresult> src,
    int flags,
  ) {
    return _PQcopyResult(
      src,
      flags,
    );
  }

  late final _PQcopyResultPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGresult>, ffi.Int)>>('PQcopyResult');
  late final _PQcopyResult = _PQcopyResultPtr.asFunction<
      ffi.Pointer<PGresult> Function(ffi.Pointer<PGresult>, int)>();

  int PQsetResultAttrs(
    ffi.Pointer<PGresult> res,
    int numAttributes,
    ffi.Pointer<PGresAttDesc> attDescs,
  ) {
    return _PQsetResultAttrs(
      res,
      numAttributes,
      attDescs,
    );
  }

  late final _PQsetResultAttrsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGresult>, ffi.Int,
              ffi.Pointer<PGresAttDesc>)>>('PQsetResultAttrs');
  late final _PQsetResultAttrs = _PQsetResultAttrsPtr.asFunction<
      int Function(ffi.Pointer<PGresult>, int, ffi.Pointer<PGresAttDesc>)>();

  ffi.Pointer<ffi.Void> PQresultAlloc(
    ffi.Pointer<PGresult> res,
    int nBytes,
  ) {
    return _PQresultAlloc(
      res,
      nBytes,
    );
  }

  late final _PQresultAllocPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<PGresult>, ffi.Size)>>('PQresultAlloc');
  late final _PQresultAlloc = _PQresultAllocPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<PGresult>, int)>();

  int PQresultMemorySize(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQresultMemorySize(
      res,
    );
  }

  late final _PQresultMemorySizePtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<PGresult>)>>(
          'PQresultMemorySize');
  late final _PQresultMemorySize =
      _PQresultMemorySizePtr.asFunction<int Function(ffi.Pointer<PGresult>)>();

  int PQsetvalue(
    ffi.Pointer<PGresult> res,
    int tup_num,
    int field_num,
    ffi.Pointer<ffi.Char> value,
    int len,
  ) {
    return _PQsetvalue(
      res,
      tup_num,
      field_num,
      value,
      len,
    );
  }

  late final _PQsetvaluePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGresult>, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('PQsetvalue');
  late final _PQsetvalue = _PQsetvaluePtr.asFunction<
      int Function(
          ffi.Pointer<PGresult>, int, int, ffi.Pointer<ffi.Char>, int)>();

  int PQescapeStringConn(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> to,
    ffi.Pointer<ffi.Char> from,
    int length,
    ffi.Pointer<ffi.Int> error,
  ) {
    return _PQescapeStringConn(
      conn,
      to,
      from,
      length,
      error,
    );
  }

  late final _PQescapeStringConnPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(
              ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ffi.Int>)>>('PQescapeStringConn');
  late final _PQescapeStringConn = _PQescapeStringConnPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<ffi.Char> PQescapeLiteral(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> str,
    int len,
  ) {
    return _PQescapeLiteral(
      conn,
      str,
      len,
    );
  }

  late final _PQescapeLiteralPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>, ffi.Size)>>('PQescapeLiteral');
  late final _PQescapeLiteral = _PQescapeLiteralPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.Char> PQescapeIdentifier(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> str,
    int len,
  ) {
    return _PQescapeIdentifier(
      conn,
      str,
      len,
    );
  }

  late final _PQescapeIdentifierPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>, ffi.Size)>>('PQescapeIdentifier');
  late final _PQescapeIdentifier = _PQescapeIdentifierPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.UnsignedChar> PQescapeByteaConn(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.UnsignedChar> from,
    int from_length,
    ffi.Pointer<ffi.Size> to_length,
  ) {
    return _PQescapeByteaConn(
      conn,
      from,
      from_length,
      to_length,
    );
  }

  late final _PQescapeByteaConnPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size,
              ffi.Pointer<ffi.Size>)>>('PQescapeByteaConn');
  late final _PQescapeByteaConn = _PQescapeByteaConnPtr.asFunction<
      ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<PGconn>,
          ffi.Pointer<ffi.UnsignedChar>, int, ffi.Pointer<ffi.Size>)>();

  ffi.Pointer<ffi.UnsignedChar> PQunescapeBytea(
    ffi.Pointer<ffi.UnsignedChar> strtext,
    ffi.Pointer<ffi.Size> retbuflen,
  ) {
    return _PQunescapeBytea(
      strtext,
      retbuflen,
    );
  }

  late final _PQunescapeByteaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<ffi.Size>)>>('PQunescapeBytea');
  late final _PQunescapeBytea = _PQunescapeByteaPtr.asFunction<
      ffi.Pointer<ffi.UnsignedChar> Function(
          ffi.Pointer<ffi.UnsignedChar>, ffi.Pointer<ffi.Size>)>();

  int PQescapeString(
    ffi.Pointer<ffi.Char> to,
    ffi.Pointer<ffi.Char> from,
    int length,
  ) {
    return _PQescapeString(
      to,
      from,
      length,
    );
  }

  late final _PQescapeStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('PQescapeString');
  late final _PQescapeString = _PQescapeStringPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.UnsignedChar> PQescapeBytea(
    ffi.Pointer<ffi.UnsignedChar> from,
    int from_length,
    ffi.Pointer<ffi.Size> to_length,
  ) {
    return _PQescapeBytea(
      from,
      from_length,
      to_length,
    );
  }

  late final _PQescapeByteaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size, ffi.Pointer<ffi.Size>)>>('PQescapeBytea');
  late final _PQescapeBytea = _PQescapeByteaPtr.asFunction<
      ffi.Pointer<ffi.UnsignedChar> Function(
          ffi.Pointer<ffi.UnsignedChar>, int, ffi.Pointer<ffi.Size>)>();

  void PQprint(
    ffi.Pointer<FILE> fout,
    ffi.Pointer<PGresult> res,
    ffi.Pointer<PQprintOpt> po,
  ) {
    return _PQprint(
      fout,
      res,
      po,
    );
  }

  late final _PQprintPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<FILE>, ffi.Pointer<PGresult>,
              ffi.Pointer<PQprintOpt>)>>('PQprint');
  late final _PQprint = _PQprintPtr.asFunction<
      void Function(
          ffi.Pointer<FILE>, ffi.Pointer<PGresult>, ffi.Pointer<PQprintOpt>)>();

  void PQdisplayTuples(
    ffi.Pointer<PGresult> res,
    ffi.Pointer<FILE> fp,
    int fillAlign,
    ffi.Pointer<ffi.Char> fieldSep,
    int printHeader,
    int quiet,
  ) {
    return _PQdisplayTuples(
      res,
      fp,
      fillAlign,
      fieldSep,
      printHeader,
      quiet,
    );
  }

  late final _PQdisplayTuplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<PGresult>, ffi.Pointer<FILE>, ffi.Int,
              ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int)>>('PQdisplayTuples');
  late final _PQdisplayTuples = _PQdisplayTuplesPtr.asFunction<
      void Function(ffi.Pointer<PGresult>, ffi.Pointer<FILE>, int,
          ffi.Pointer<ffi.Char>, int, int)>();

  void PQprintTuples(
    ffi.Pointer<PGresult> res,
    ffi.Pointer<FILE> fout,
    int PrintAttNames,
    int TerseOutput,
    int colWidth,
  ) {
    return _PQprintTuples(
      res,
      fout,
      PrintAttNames,
      TerseOutput,
      colWidth,
    );
  }

  late final _PQprintTuplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<PGresult>, ffi.Pointer<FILE>, ffi.Int,
              ffi.Int, ffi.Int)>>('PQprintTuples');
  late final _PQprintTuples = _PQprintTuplesPtr.asFunction<
      void Function(ffi.Pointer<PGresult>, ffi.Pointer<FILE>, int, int, int)>();

  int lo_open(
    ffi.Pointer<PGconn> conn,
    int lobjId,
    int mode,
  ) {
    return _lo_open(
      conn,
      lobjId,
      mode,
    );
  }

  late final _lo_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>, Oid, ffi.Int)>>('lo_open');
  late final _lo_open =
      _lo_openPtr.asFunction<int Function(ffi.Pointer<PGconn>, int, int)>();

  int lo_close(
    ffi.Pointer<PGconn> conn,
    int fd,
  ) {
    return _lo_close(
      conn,
      fd,
    );
  }

  late final _lo_closePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>, ffi.Int)>>(
      'lo_close');
  late final _lo_close =
      _lo_closePtr.asFunction<int Function(ffi.Pointer<PGconn>, int)>();
